--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#">Quem sou eu</a>
+            <a class="nav-link" href="#">Sobre mim</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Experiência</a>
@@ -66,7 +66,7 @@
 
     <!-- fim do container de perfil -->
      <!-- seção sobre -->
-      <div class="sobre-mim justify-content-center">
+      <div class="sobre-mim">
         <div class="textos justify-content-center">
           <h1>Sobre mim</h1>
           <p>Olá! me chamo Rafaela, acabei de me formar em biologia pela FMU e tive a oportunidade de estagiar no museu
@@ -75,7 +75,6 @@
             onde possa aplicar meus conhecimentos.
           </p>
         </div>
-
       </div>
       <!-- seção experiencia/habilidades -->
 
