baixar-cv-botao

--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
           Sou uma profissional dedicada, responsável e adoro trabalhar em equipe. Estou em busca de oportunidades desafiadoras
           onde possa aplicar meus conhecimentos.
         </p>
-      </div>
+      </div>   
+          <a href="path/to/your-file.ext" download="filename.ext" class="download-btn">
+          <h4 class="baixar-cv">Baixar CV</h1>
+          </a>  
     </div>
     <!-- seção experiencia/habilidades -->
     
