--- a/index.html
+++ b/index.html
@@ -83,12 +83,21 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Estágio USP
+              Estágio USP - Museu de Zoologia
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              Fui estagiária na
+              <strong> Curadoria e contagem de formigas </strong>. do Museu de  Zoologia da USP. Durante esse período, aprendi a lidar com coleções, identificar espécies, realizar pesquisas
+            </div>
+            <div class="fotos-container">
+              <div class="fotos-estagio">
+                <img src="images/formiga-1.jpeg" alt="estagio">
+                <img src="images/formiga-2.jpeg" alt="estagio">
+                <img src="images/formiga-3.jpeg" alt="estagio">
+                <img src="images/formiga-4.jpeg" alt="estagio">
+              </div>
             </div>
           </div>
         </div>
