--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@
           </div>
         </div>
       </div>
+      <div class="container-logo">
+        <div class="icon-logo">
+          <img src="images/USP-Brasão-icone.jpg" alt="USP">
+        </div>
+        <div class="icons">
+          <img src="images/fmu-icone.png" alt="FMU">
+        </div>       
+      </div>
     </div>
 
     </div>
