--- a/index.html
+++ b/index.html
@@ -150,9 +150,12 @@
         <div class="icon-logo">
           <img src="images/USP-Brasão-icone.jpg" alt="USP">
         </div>
-        <div class="icons">
+        <div class="icon-logo">
           <img src="images/fmu-icone.png" alt="FMU">
-        </div>       
+        </div>      
+        <div class="icon-logo">
+          <img src="images/etec-logo.png" alt="ETEC">
+        </div> 
       </div>
     </div>
 
