--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     
     <!-- fim do container de perfil -->
     <!-- seção sobre -->
-    <div class="sobre-mim">
+    <div class="sobre-mim" id="sobre">
       <div class="icone-sobre">
         <img src="images/icone-sobre.png" alt="icone-sobre">
       </div>
       <div class="textos justify-content-center">
-        <h1 id="sobre">Sobre mim</h1>
+        <h1>Sobre mim</h1>
         <p>Olá! me chamo Rafaela, acabei de me formar em biologia pela FMU e tive a oportunidade de estagiar no museu
           de zoologia da USP. Durante esse período aprendi a lidar com coleções, identificar espécies e realizar pesquisas.
           Sou uma profissional dedicada, responsável e adoro trabalhar em equipe. Estou em busca de oportunidades desafiadoras
@@ -83,8 +83,8 @@
           </a>  
     </div>
     <!-- seção experiencia/habilidades -->
-    <div class="experiencias">
-      <h1 id="experiencia">Experiência</h1>
+    <div class="experiencias" id="experiencia" >
+      <h1>Experiência</h1>
       <div class="experiencias-texto">
         <h6>Bióloga formada por uma instituição reconhecida pelo MEC, adquiri tanto habilidades teóricas quanto práticas ao longo da graduação. As diversas experiências vividas durante o curso enriqueceram meu conhecimento, preparando-me para atuar de forma eficaz e inovadora no campo das ciências biológicas.</h6>      
       </div>
@@ -101,8 +101,8 @@
               Fui estagiária na
               <strong> Curadoria e contagem de formigas </strong>. do Museu de  Zoologia da USP. Durante esse período, aprendi a lidar com coleções, identificar espécies, realizar pesquisas
             </div>
-            <div class="fotos-container">
-              <div class="fotos-estagio">
+            <div class="carrossel-fotos">
+              <div class="fotos-lab">
                 <img src="images/formiga-1.jpeg" alt="estagio">
                 <img src="images/formiga-2.jpeg" alt="estagio">
                 <img src="images/formiga-3.jpeg" alt="estagio">
@@ -163,8 +163,8 @@
     <!-- fim da seção de habilidaes -->
     <!-- carrossel fotos -->
 
-    <div class="container-contato">
-      <h1 id="contato">Contato</h1>
+    <div class="container-contato" id="contato">
+      <h1>Contato</h1>
       <p>Entre em contato comigo!</p>
       <div class="section-contato">
         <div class="icon">
